--- a/Prototype/Views/Home/_Partials/GroupCosplays.cshtml
+++ b/Prototype/Views/Home/_Partials/GroupCosplays.cshtml
@@ -8,7 +8,7 @@
 <section class="scroll-container" onscroll="scrollFunction('groupsContainer')" id="groupsContainer">
 
     <!-- Mid Level Tools -->
-    <div id="toolbar">
+    <div class="toolbar">
 
         <!-- Search -->
         <div class="input-group mb-3" id="groupSearch">
