--- a/Prototype/Views/Home/_Partials/GroupsFeed.cshtml
+++ b/Prototype/Views/Home/_Partials/GroupsFeed.cshtml
@@ -10,7 +10,7 @@
 <section class="scroll-container" onscroll="scrollFunction('postContainer')" id="postContainer">
 
     <!-- Mid Level Tools -->
-    <div id="toolbar">
+    <div class="toolbar">
 
         <!-- Filter Dropdown -->
         <div class="dropdown">
