--- a/Prototype/Views/Home/_Partials/Discover.cshtml
+++ b/Prototype/Views/Home/_Partials/Discover.cshtml
@@ -67,7 +67,7 @@
 
     <partial>
         @{
-            await Html.RenderPartialAsync("Modals/AboutGroup");
+            await Html.RenderPartialAsync("Modals/AboutDiscoverGroup");
         }
     </partial>
 
