--- a/Prototype/Views/Home/_Partials/GroupCosplays.cshtml
+++ b/Prototype/Views/Home/_Partials/GroupCosplays.cshtml
@@ -10,13 +10,7 @@
     <!-- Mid Level Tools -->
     <div class="toolbar">
 
-        <!-- Search -->
-        <div class="input-group mb-3" id="groupSearch">
-            <span class="input-group-text"><i class='bx bx-search'></i></span>
-            <input type="text" class="form-control" aria-label="Search Groups">
-        </div>
-
-        <!-- Example single danger button -->
+        <!-- Dropdown Filter Control -->
         <div class="dropdown">
             <button onclick="toggleDropdown('groupsFilters')" class="btn btn-cosgear">
                 <i class='bx bx-filter-alt'></i>
@@ -60,6 +54,12 @@
                 </div>
             </div>
         </div>
+
+        <!-- Search Bar -->
+        <div class="input-group mb-3" id="groupSearch">
+            <span class="input-group-text"><i class='bx bx-search'></i></span>
+            <input type="text" class="form-control" aria-label="Search Groups">
+        </div>      
 
     </div>
 
