--- a/Prototype/wwwroot/css/groupFeed.css
+++ b/Prototype/wwwroot/css/groupFeed.css
@@ -76,17 +76,18 @@
 
     /* Next & previous buttons */
     .post-card .prev, .post-card .next {
+        background-color: #00000091;
         cursor: pointer;
         position: absolute;
         top: 50%;
         width: auto;
-        padding: 16px;
+        padding: 8px;
         margin-top: -22px;
         color: var(--cosgear-5);
         font-weight: bold;
         font-size: 18px;
         transition: 0.6s ease;
-        border-radius: 0 3px 3px 0;
+        border-radius: 12px;
         user-select: none;
         text-decoration: none;
     }
@@ -94,12 +95,12 @@
     /* Position the "next button" to the right */
     .post-card .next {
         right: 0;
-        border-radius: 3px 0 0 3px;
     }
 
     .post-card img {
         max-width: 100%;
         vertical-align: middle;
+        margin-bottom: 12px;
     }
 
     .post-card .numbertext {
