Adding floating button to add to the cosplay page

--- a/Prototype/Views/Home/_Partials/GroupCosplays.cshtml
+++ b/Prototype/Views/Home/_Partials/GroupCosplays.cshtml
@@ -63,6 +63,8 @@
 
     </div>
 
+    <button onclick="addNewCosplay" class="float-btn" title="Go to top"><i class='bx bx-plus'></i></button>
+
     <!-- Group Lists -->
     <div class="container">
         @for (int i = 0; i < groupNumber; i++)
