--- a/Prototype/wwwroot/css/groups.css
+++ b/Prototype/wwwroot/css/groups.css
@@ -99,7 +99,6 @@ body {
     }
 
 
-
 /* Back To Top Button */
 .myBtn {
     display: none;
@@ -115,6 +114,28 @@ body {
     cursor: pointer;
     padding: 8px 12px;
     border-radius: 12px;
+}
+
+    .myBtn:hover {
+        background-color: var(--cosgear-4);
+    }
+
+/* Floating Button */
+.float-btn {
+    display: block;
+    position: fixed;
+    bottom: 20px;
+    left: 30px;
+    z-index: 99;
+    font-size: 20px;
+    font-weight: 800;
+    border: none;
+    outline: none;
+    background-color: var(--cosgear-2);
+    color: var(--cosgear-1);
+    cursor: pointer;
+    padding: 8px 12px;
+    border-radius: 50%;
 }
 
     .myBtn:hover {
