--- a/Prototype/Views/Shared/Modals/Notifications.cshtml
+++ b/Prototype/Views/Shared/Modals/Notifications.cshtml
@@ -10,7 +10,7 @@
 <link rel="stylesheet" href="~/css/notification.css" />
 
 <!-- Modal -->
-<div class="modal fade" id="groupNotificationsModal" tabindex="-1" aria-labelledby="inviteUserModalLabel" aria-hidden="true">
+<div class="modal fade" id="groupNotificationsModal" tabindex="-1" aria-labelledby="groupNotificationsModalLabel" aria-hidden="true">
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
